--- a/style.css
+++ b/style.css
@@ -104,3 +104,16 @@ footer {
     font-size: 0.9rem;
     opacity: 0.7;
 }
+
+/* Wenn Bildschirm kleiner (Handy / Tablet) */
+@media (max-width: 768px) {
+    .projects-grid{
+        grid-template-columns: 1fr;
+    }
+    body{
+        padding: 1rem;
+    }
+    h1{
+        font-size: 2rem;
+    }
+}
